[tool.poetry]
name = "eager_cache"
version = "0.1.0"
description = "Eager caching made easy"
authors = [
"Lior Pollak"
]
maintainers = [
"Lior Pollak"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = {version = "^1.8.2", extras = ["dotenv"]}
yarl = "^1.6.3"
ujson = "^5.1.0"
aioredis = {version = "^2.0.0", extras = ["hiredis"]}
aiofiles = "^0.7.0"
httptools = "^0.3.0"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
deepdiff = "^5.7.0"
msgpack = "^1.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.910"
isort = "^5.9.3"
yesqa = "^1.2.3"
pre-commit = "^2.11.0"
wemake-python-styleguide = "^0.15.3"
black = "==21.7b0"
autoflake = "^1.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
nest-asyncio = "^1.5.1"
pytest-env = "^0.6.2"
fakeredis = "^1.6.1"
requests = "^2.26.0"
types-redis = "^4.1.16"


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["eager_cache",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
